kubernetes/ingress/haproxy/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: ingress-controller
  labels:
    name: app
spec:
  containers:
  - name: app
    image: nginx
    imagePullPolicy: IfNotPresent
    ports:
      - containerPort: 80
        protocol: TCP
    resources: {}
