kubernetes/ingress/haproxy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
  labels:
    name: mydeployment
  namespace: ingress-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      name: app
      labels:
        name: app
    spec:
      containers:
        - name: app
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-controller
  name: myservice
  labels:
    name: myservice
spec:
  type: ClusterIP
  selector:
    name: app
  sessionAffinity: None
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
