kubernetes/ingress/haproxy/ingress_ssl.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: ingress
spec:
  tls:
    - hosts:
      - congnt.test
      secretName: congnt-test
  rules:
  - host: congnt.test
    http:
      paths:
      - path: /
        backend:
          serviceName: myservice
          servicePort: 80
